Tue May 23 12:00:38 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a NetworkTermList object.  Currently a fair way from working
	  correctly, but it does compile:  uses lots of unimplemented
	  methods.

	* General work on termlists (documentation comments, code tidying),
	  and expand.

Mon May 22 18:36:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* ProgClient and omprogsrv can both now take more than one database
	  argument.

	* Net stuff now doesn't bomb out from SIGPIPE.

	* Miscellaneous bug fixes

	* apitest has code to run tests on the net backend.

Mon May 22 15:31:12 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved inline functions from testutils.h to testutils.cc

	* Separated out the non-backend-using tests from apitest to
	  avoid running them more than once when more than one backend
	  is compiled in.

Mon May 22 14:53:25 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* FAIL_TEST macro in testsuite.h now takes notice of the verbose
	  flag.

	* In theory, the sleepy tests are only run if the sleepy backend
	  is compiled in (as well as the #if 0)

Mon May 22 13:44:21 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Slightly improved summary reporting in apitest.

Mon May 22 13:28:26 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a memory leak in SleepyDatabase (when database doesn't
	  exist).

Mon May 22 13:08:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* apitest can now run all the tests against sleepycat as well as
	  inmemory tables.  The actual call is currently protected by
	  #if 0.

Fri May 19 18:35:33 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Abstracted all database access in apitest to one function, so that
	  it can easily be made to run with different backends.

Fri May 19 16:30:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Changed raw uses of "cout" and "cerr" in net code to use
	  DebugMsg instead.